panko-compiletest/src/snapshots/panko_compiletest__layout-panko__tests__cases__execute__test_block_comments.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_block_comments.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration (puts~0 `fn(∅: ptr<char const>) -> int` (static puts)) ∅)
   (function-definition
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>) -> int>` @8
                  (puts~0 `fn(∅: ptr<char const>) -> int` (static puts)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 24>>` @16
                        (string `array<char; 24>` @void "comment /* in */ string\0"))))))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>) -> int>` @8
                  (puts~0 `fn(∅: ptr<char const>) -> int` (static puts)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 12>>` @16
                        (string `array<char; 12>` @void "hello world\0")))))))))

----- stderr -----
