panko-compiletest/src/snapshots/panko_compiletest__layout-panko__tests__cases__execute__test_compound_assignment_evaluates_to_correct_value.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_compound_assignment_evaluates_to_correct_value.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (x~1 `int` @0) (42 `int` @0))
         (return
            (combine `int` @4
               (assign `ptr<int>` @8
                  (unnamed-temporary~2 `ptr<int>` @8)
                  (addressof `ptr<int>` @8
                     (x~1 `int` @0)))
               (assign `int` @4
                  (deref `int` @4 (unnamed-temporary~2 `ptr<int>` @8))
                  (truncate `int` @16
                     (add `long` @24
                        (sign-extend `long` @24 (deref `int` @32 (unnamed-temporary~2 `ptr<int>` @8)))
                        (27 `long` @40)))))))))

----- stderr -----
