panko-compiletest/src/snapshots/panko_compiletest__layout-panko__tests__cases__execute__test_return_local_variable_in_main.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_return_local_variable_in_main.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (value~1 `int` @0) (123 `int` @0))
         (return (value~1 `int` @0)))))

----- stderr -----
